# qcinput

./: .gitignore  README.md  default.nix  flake.nix  justfile  pyproject.toml  python-env.nix
.github/workflows/: update-flake-lock.yml
src/qcinput/: __init__.py  __main__.py  cli.py  config.py  gaussian.py  orca.py  xyz.py
src/qcinput/structure/: __init__.py  gjf.py
tests/: conftest.py  helpers.py  test_cli_gaussian.py  test_cli_gjf_input.py  test_cli_init.py  test_cli_orca.py
